[metadata]
name = pyGEEMs
author = Albert R. Kottke
author_email = albert.kottke@gmail.com
version = attr: pygeems.__version__
description = Geotechnical earthquake engineering models implemented in Python.
long_description = file: README.rst, HISTORY.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    matplotlib
    numba
    numpy
    pandas
    scipy

[options.packages.find]:
exclude =
    tests*

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-runner
dev =
    black
    flake8
    pre-commit
    pydocstyle
    watchdog
    twine

[pydocstyle]
inherit = false
convention = numpy
match = (?!test_).*\.py

[flake8]
max-line-length = 88
extend-ignore = E203
